--- a/Projekt/Projekt_bloggpost.html
+++ b/Projekt/Projekt_bloggpost.html
@@ -14974,36 +14974,7 @@ $$ \text{Procentuell förändring} = \frac{\text{Antal döda per } 100 000 \text
 </div>
 </div>
 </div>
-</div><div class="jp-Cell jp-CodeCell jp-Notebook-cell  jp-mod-noInput ">
-
-<div class="jp-Cell-outputWrapper">
-<div class="jp-Collapser jp-OutputCollapser jp-Cell-outputCollapser">
-</div>
-
-<div class="jp-OutputArea jp-Cell-outputArea">
-
-<div class="jp-OutputArea-child">
-
-<div class="jp-RenderedText jp-OutputArea-output" data-mime-type="application/vnd.jupyter.stderr">
-<pre>/var/folders/sj/fz9n44sj26bblghntnb8bbrr0000gn/T/ipykernel_79376/2560931578.py:2: SettingWithCopyWarning: 
-A value is trying to be set on a copy of a slice from a DataFrame.
-Try using .loc[row_indexer,col_indexer] = value instead
-
-See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy
-  change_df.loc[:, &#39;Procentuell förändring&#39;] = (((change_df[&#39;2023&#39;]-change_df[&#39;1997&#39;])/change_df[&#39;1997&#39;])*100).round(1)
-/var/folders/sj/fz9n44sj26bblghntnb8bbrr0000gn/T/ipykernel_79376/2560931578.py:3: SettingWithCopyWarning: 
-A value is trying to be set on a copy of a slice from a DataFrame.
-Try using .loc[row_indexer,col_indexer] = value instead
-
-See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy
-  change_df.loc[:, &#39;Differens&#39;] = change_df[&#39;2023&#39;]-change_df[&#39;1997&#39;]
-</pre>
-</div>
-</div>
-
-</div>
-
-</div>
+</div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs jp-mod-noInput ">
 
 </div><div class="jp-Cell jp-CodeCell jp-Notebook-cell  jp-mod-noInput ">
 
